CloudFormation/VPC_Template_2012-09-07.json
{
    "AWSTemplateFormatVersion":"2010-09-09",
    "Description":"FirstFuel standard VPC template with VPN and NAT servers	.",
    "Parameters":{
        "SSHKeyName":{
            "Description":"SSH key for launched instances",
            "Type":"String",
            "Default":"firstfuel-dev-stephen"
        },
        "VPCCidrBlock":{
            "Description":"CIDR block for VPC",
            "Type":"String",
            "Default":"10.99.0.0/16"
        },
        "PublicSubnetACidrBlock":{
            "Description":"CIDR block for Public Subnet A",
            "Type":"String",
            "Default":"10.99.0.0/24"
        },
        "PublicSubnetBCidrBlock":{
            "Description":"CIDR block for Public Subnet B",
            "Type":"String",
            "Default":"10.99.1.0/24"
        },
        "PrivateSubnetACidrBlock":{
            "Description":"CIDR block for Private Subnet A",
            "Type":"String",
            "Default":"10.99.10.0/24"
        },
        "PrivateSubnetBCidrBlock":{
            "Description":"CIDR block for Private Subnet B",
            "Type":"String",
            "Default":"10.99.11.0/24"
        },
        "PublicSubnetAAvailabilityZone":{
            "Description":"Availability Zone for Public Subnet A",
            "Type":"String",
            "Default":"us-east-1a"
        },
        "PublicSubnetBAvailabilityZone":{
            "Description":"Availability Zone for Public Subnet B",
            "Type":"String",
            "Default":"us-east-1b"
        },
        "PrivateSubnetAAvailabilityZone":{
            "Description":"Availability Zone for Private Subnet A",
            "Type":"String",
            "Default":"us-east-1c"
        },
        "PrivateSubnetBAvailabilityZone":{
            "Description":"Availability Zone for Private Subnet B",
            "Type":"String",
            "Default":"us-east-1d"
        }
    },
    "Resources":{
        "VPC":{
            "Type":"AWS::EC2::VPC",
            "Properties":{
                "CidrBlock":{
                    "Ref":"VPCCidrBlock"
                },
                "Tags":[
                    {
                        "Key":"Application",
                        "Value":{
                            "Ref":"AWS::StackName"
                        }
                    },
                    {
                        "Key":"Network",
                        "Value":"Public"
                    }
                ]
            }
        },
        "PublicSubnetA":{
            "Type":"AWS::EC2::Subnet",
            "Properties":{
                "VpcId":{
                    "Ref":"VPC"
                },
                "CidrBlock":{
                    "Ref":"PublicSubnetACidrBlock"
                },
                "AvailabilityZone":{
                    "Ref":"PublicSubnetAAvailabilityZone"
                },
                "Tags":[
                    {
                        "Key":"Application",
                        "Value":{
                            "Ref":"AWS::StackName"
                        }
                    },
                    {
                        "Key":"Network",
                        "Value":"Public Subnet A"
                    }
                ]
            }
        },
        "PublicSubnetB":{
            "Type":"AWS::EC2::Subnet",
            "Properties":{
                "VpcId":{
                    "Ref":"VPC"
                },
                "CidrBlock":{
                    "Ref":"PublicSubnetBCidrBlock"
                },
                "AvailabilityZone":{
                    "Ref":"PublicSubnetBAvailabilityZone"
                },
                "Tags":[
                    {
                        "Key":"Application",
                        "Value":{
                            "Ref":"AWS::StackName"
                        }
                    },
                    {
                        "Key":"Network",
                        "Value":"Public Subnet B"
                    }
                ]
            }
        },
        "InternetGateway":{
            "Type":"AWS::EC2::InternetGateway",
            "Properties":{
                "Tags":[
                    {
                        "Key":"Application",
                        "Value":{
                            "Ref":"AWS::StackName"
                        }
                    },
                    {
                        "Key":"Network",
                        "Value":"Public"
                    }
                ]
            }
        },
        "AttachGateway":{
            "Type":"AWS::EC2::VPCGatewayAttachment",
            "Properties":{
                "VpcId":{
                    "Ref":"VPC"
                },
                "InternetGatewayId":{
                    "Ref":"InternetGateway"
                }
            }
        },
        "PublicRouteTable":{
            "Type":"AWS::EC2::RouteTable",
            "Properties":{
                "VpcId":{
                    "Ref":"VPC"
                },
                "Tags":[
                    {
                        "Key":"Application",
                        "Value":{
                            "Ref":"AWS::StackName"
                        }
                    },
                    {
                        "Key":"Network",
                        "Value":"Public"
                    }
                ]
            }
        },
        "PublicRoute":{
            "Type":"AWS::EC2::Route",
            "Properties":{
                "RouteTableId":{
                    "Ref":"PublicRouteTable"
                },
                "DestinationCidrBlock":"0.0.0.0/0",
                "GatewayId":{
                    "Ref":"InternetGateway"
                }
            }
        },
        "PublicSubnetARouteTableAssociation":{
            "Type":"AWS::EC2::SubnetRouteTableAssociation",
            "Properties":{
                "SubnetId":{
                    "Ref":"PublicSubnetA"
                },
                "RouteTableId":{
                    "Ref":"PublicRouteTable"
                }
            }
        },
        "PublicSubnetBRouteTableAssociation":{
            "Type":"AWS::EC2::SubnetRouteTableAssociation",
            "Properties":{
                "SubnetId":{
                    "Ref":"PublicSubnetB"
                },
                "RouteTableId":{
                    "Ref":"PublicRouteTable"
                }
            }
        },
        "PublicNetworkAcl":{
            "Type":"AWS::EC2::NetworkAcl",
            "Properties":{
                "VpcId":{
                    "Ref":"VPC"
                },
                "Tags":[
                    {
                        "Key":"Application",
                        "Value":{
                            "Ref":"AWS::StackName"
                        }
                    },
                    {
                        "Key":"Network",
                        "Value":"Public"
                    }
                ]
            }
        },
        "InboundHTTPPublicNetworkAclEntry":{
            "Type":"AWS::EC2::NetworkAclEntry",
            "Properties":{
                "NetworkAclId":{
                    "Ref":"PublicNetworkAcl"
                },
                "RuleNumber":"100",
                "Protocol":"6",
                "RuleAction":"allow",
                "Egress":"false",
                "CidrBlock":"0.0.0.0/0",
                "PortRange":{
                    "From":"80",
                    "To":"80"
                }
            }
        },
        "InboundDynamicPortsPublicNetworkAclEntry":{
            "Type":"AWS::EC2::NetworkAclEntry",
            "Properties":{
                "NetworkAclId":{
                    "Ref":"PublicNetworkAcl"
                },
                "RuleNumber":"101",
                "Protocol":"6",
                "RuleAction":"allow",
                "Egress":"false",
                "CidrBlock":"0.0.0.0/0",
                "PortRange":{
                    "From":"1024",
                    "To":"65535"
                }
            }
        },
        "OutboundHTTPPublicNetworkAclEntry":{
            "Type":"AWS::EC2::NetworkAclEntry",
            "Properties":{
                "NetworkAclId":{
                    "Ref":"PublicNetworkAcl"
                },
                "RuleNumber":"100",
                "Protocol":"6",
                "RuleAction":"allow",
                "Egress":"true",
                "CidrBlock":"0.0.0.0/0",
                "PortRange":{
                    "From":"80",
                    "To":"80"
                }
            }
        },
        "OutboundDynamicPortPublicNetworkAclEntry":{
            "Type":"AWS::EC2::NetworkAclEntry",
            "Properties":{
                "NetworkAclId":{
                    "Ref":"PublicNetworkAcl"
                },
                "RuleNumber":"101",
                "Protocol":"6",
                "RuleAction":"allow",
                "Egress":"true",
                "CidrBlock":"0.0.0.0/0",
                "PortRange":{
                    "From":"1024",
                    "To":"65535"
                }
            }
        },
        "PublicSubnetANetworkAclAssociation":{
            "Type":"AWS::EC2::SubnetNetworkAclAssociation",
            "Properties":{
                "SubnetId":{
                    "Ref":"PublicSubnetA"
                },
                "NetworkAclId":{
                    "Ref":"PublicNetworkAcl"
                }
            }
        },
        "PublicSubnetBNetworkAclAssociation":{
            "Type":"AWS::EC2::SubnetNetworkAclAssociation",
            "Properties":{
                "SubnetId":{
                    "Ref":"PublicSubnetB"
                },
                "NetworkAclId":{
                    "Ref":"PublicNetworkAcl"
                }
            }
        },
        "PrivateSubnetA":{
            "Type":"AWS::EC2::Subnet",
            "Properties":{
                "VpcId":{
                    "Ref":"VPC"
                },
                "CidrBlock":{
                    "Ref":"PrivateSubnetACidrBlock"
                },
                "AvailabilityZone":{
                    "Ref":"PrivateSubnetAAvailabilityZone"
                },
                "Tags":[
                    {
                        "Key":"Application",
                        "Value":{
                            "Ref":"AWS::StackName"
                        }
                    },
                    {
                        "Key":"Network",
                        "Value":"Private"
                    }
                ]
            }
        },
        "PrivateSubnetB":{
            "Type":"AWS::EC2::Subnet",
            "Properties":{
                "VpcId":{
                    "Ref":"VPC"
                },
                "CidrBlock":{
                    "Ref":"PrivateSubnetBCidrBlock"
                },
                "AvailabilityZone":{
                    "Ref":"PrivateSubnetBAvailabilityZone"
                },
                "Tags":[
                    {
                        "Key":"Application",
                        "Value":{
                            "Ref":"AWS::StackName"
                        }
                    },
                    {
                        "Key":"Network",
                        "Value":"Private"
                    }
                ]
            }
        },
        "PrivateRouteTable":{
            "Type":"AWS::EC2::RouteTable",
            "Properties":{
                "VpcId":{
                    "Ref":"VPC"
                },
                "Tags":[
                    {
                        "Key":"Application",
                        "Value":{
                            "Ref":"AWS::StackName"
                        }
                    },
                    {
                        "Key":"Network",
                        "Value":"Private"
                    }
                ]
            }
        },
        "PrivateSubnetARouteTableAssociation":{
            "Type":"AWS::EC2::SubnetRouteTableAssociation",
            "Properties":{
                "SubnetId":{
                    "Ref":"PrivateSubnetA"
                },
                "RouteTableId":{
                    "Ref":"PrivateRouteTable"
                }
            }
        },
        "PrivateNetworkAcl":{
            "Type":"AWS::EC2::NetworkAcl",
            "Properties":{
                "VpcId":{
                    "Ref":"VPC"
                },
                "Tags":[
                    {
                        "Key":"Application",
                        "Value":{
                            "Ref":"AWS::StackName"
                        }
                    },
                    {
                        "Key":"Network",
                        "Value":"Private"
                    }
                ]
            }
        },
        "InboundPrivateNetworkAclEntry":{
            "Type":"AWS::EC2::NetworkAclEntry",
            "Properties":{
                "NetworkAclId":{
                    "Ref":"PrivateNetworkAcl"
                },
                "RuleNumber":"100",
                "Protocol":"6",
                "RuleAction":"allow",
                "Egress":"false",
                "CidrBlock":"0.0.0.0/0",
                "PortRange":{
                    "From":"0",
                    "To":"65535"
                }
            }
        },
        "OutboundPrivateNetworkAclEntry":{
            "Type":"AWS::EC2::NetworkAclEntry",
            "Properties":{
                "NetworkAclId":{
                    "Ref":"PrivateNetworkAcl"
                },
                "RuleNumber":"100",
                "Protocol":"6",
                "RuleAction":"allow",
                "Egress":"true",
                "CidrBlock":"0.0.0.0/0",
                "PortRange":{
                    "From":"0",
                    "To":"65535"
                }
            }
        },
        "PrivateSubnetANetworkAclAssociation":{
            "Type":"AWS::EC2::SubnetNetworkAclAssociation",
            "Properties":{
                "SubnetId":{
                    "Ref":"PrivateSubnetA"
                },
                "NetworkAclId":{
                    "Ref":"PrivateNetworkAcl"
                }
            }
        },
        "AdminWebServerElasticLoadBalancer":{
            "Type":"AWS::ElasticLoadBalancing::LoadBalancer",
            "Properties":{
                "SecurityGroups":[
                    {
                        "Ref":"LoadBalancerSecurityGroup"
                    }
                ],
                "Subnets":[
                    {
                        "Ref":"PublicSubnetA"
                    },
                    {
                        "Ref":"PublicSubnetB"
                    }
                ],
                "LBCookieStickinessPolicy":[
                    {
                        "PolicyName":"CookieBasedPolicy",
                        "CookieExpirationPeriod":"30"
                    }
                ],
                "Listeners":[
                    {
                        "LoadBalancerPort":3000,
                        "InstancePort":80,
                        "Protocol":"HTTP",
                        "PolicyNames":[
                            "CookieBasedPolicy"
                        ]
                    },
                    {
                        "InstancePort":"3000",
                        "LoadBalancerPort":"443",
                        "Protocol":"HTTPS",
                        "SSLCertificateId":"arn:aws:iam::322663537532:server-certificate/FirstFuel",
                        "PolicyNames":[
                            "CookieBasedPolicy"
                        ]
                    }
                ],
                "HealthCheck":{
                    "Target":"HTTP:80/",
                    "HealthyThreshold":"2",
                    "UnhealthyThreshold":"5",
                    "Interval":"10",
                    "Timeout":"5"
                }
            }
        },
        "LoadBalancerSecurityGroup":{
            "Type":"AWS::EC2::SecurityGroup",
            "Properties":{
                "GroupDescription":"Enable HTTP access on port 80",
                "VpcId":{
                    "Ref":"VPC"
                },
                "SecurityGroupIngress":[
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"80",
                        "ToPort":"80",
                        "CidrIp":"0.0.0.0/0"
                    }
                ]
            }
        },
        "VPNServerSecurityGroup":{
            "Type":"AWS::EC2::SecurityGroup",
            "Properties":{
                "GroupDescription":"Enable OpenVPN access",
                "VpcId":{
                    "Ref":"VPC"
                },
                "SecurityGroupIngress":[
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"443",
                        "ToPort":"443",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"udp",
                        "FromPort":"1194",
                        "ToPort":"1194",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"22",
                        "ToPort":"22",
                        "CidrIp":"0.0.0.0/0"
                    }
                ]
            }
        },
        "VPNServerIPAddress":{
            "Type":"AWS::EC2::EIP",
            "Properties":{
                "Domain":"vpc",
                "InstanceId":{
                    "Ref":"VPNServer"
                }
            }
        },
        "VPNServer":{
            "Type":"AWS::EC2::Instance",
            "Properties":{
                "SubnetId":{
                    "Ref":"PublicSubnetA"
                },
                "ImageId":"ami-9350fbfa",
                "InstanceType":"m1.small",
                "KeyName":{
                    "Ref":"SSHKeyName"
                },
                "SecurityGroupIds":[
                    {
                        "Ref":"VPNServerSecurityGroup"
                    }
                ]
            }
        },
        "NATServerSecurityGroup":{
            "Type":"AWS::EC2::SecurityGroup",
            "Properties":{
                "GroupDescription":"Enable NAT server access",
                "VpcId":{
                    "Ref":"VPC"
                },
                "SecurityGroupIngress":[
                    
                ]
            }
        },
        "NATServer":{
            "Type":"AWS::EC2::Instance",
            "Properties":{
                "SubnetId":{
                    "Ref":"PublicSubnetB"
                },
                "ImageId":"ami-f619c29f",
                "InstanceType":"m1.small",
                "KeyName":{
                    "Ref":"SSHKeyName"
                },
                "SecurityGroupIds":[
                    {
                        "Ref":"NATServerSecurityGroup"
                    }
                ]
            }
        }
    },
    "Outputs":{
        "VPC":{
            "Description":"VPC Id",
            "Value":{
                "Ref":"VPC"
            }
        },
        "PublicSubnetA":{
            "Description":"Subnet Id",
            "Value":{
                "Ref":"PublicSubnetA"
            }
        },
        "PublicSubnetB":{
            "Description":"Subnet Id",
            "Value":{
                "Ref":"PublicSubnetB"
            }
        },
        "PrivateSubnetA":{
            "Description":"Subnet Id",
            "Value":{
                "Ref":"PrivateSubnetA"
            }
        },
        "PrivateSubnetB":{
            "Description":"Subnet Id",
            "Value":{
                "Ref":"PrivateSubnetB"
            }
        }
    }
}
